Web : SocketClient, Server : SocketServer
1. web : 소켓 클라이언트 구현. 다른 클라이언트와 동기화.
2. server : 소켓 서버 구현. 데이터 변경 시 브로드캐스트.

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -5,12 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "node",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "name": "Launch Program",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}\\src\\server.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
-             "webRoot": "${workspaceFolder}"
-        },
+            "outFiles": [
+                "${workspaceFolder}/**/*.js"
+            ]
+        }
     ]
 }
