--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "ts-loader": "^8.0.14",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.1.3",
-    "webpack": "^5.19.0"
+    "webpack": "^5.19.0",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/ws": "^7.4.0",
     "webpack-cli": "^4.4.0"
   }
 }
