리펙토링 및 css수정
1. 명칭 수정 Item -> Card
2. 리펙토링
3. 주석처리
4. 리스트 CSS수정

--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/server.js \" ",
+    "start": "tsc-watch --onSuccess \"node dist/Server.js \" ",
     "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
